[package]
name = "app"
version = "0.1.0"
authors = ["jermdroui <jerm@conder.systems>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "1.1.1"
actix-web = "2.0"
actix-rt = "1.0"
awc = "1.0"
bytes ="0.5"
etcd-rs = "0.3"
tokio = { version = "0.3", features = ["stream"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
futures = "0.3.5"